# wane-solana

./: .gitattributes  .gitignore  .mocharc.json  Anchor.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agent/: pyproject.toml
agent/src/pikky/: __init__.py  config.py  engine.py  trader.py  x402.py
agent/src/pikky/mbti/: __init__.py  matcher.py  types.py
agent/src/pikky/solana/: __init__.py  client.py  transaction.py
agent/src/pikky/strategies/: __init__.py  base.py  enfp.py  entp.py  intj.py  istj.py  registry.py
api/: package.json
api/src/: index.ts  types.ts
api/src/middleware/: auth.ts  x402.ts
api/src/routes/: health.ts  status.ts  trade.ts
cli/: Cargo.toml
cli/src/: display.rs  main.rs
cli/src/commands/: config.rs  mod.rs  status.rs  trade.rs
docs/: architecture.md  mbti-strategies.md  x402-spec.md
e2e/: Cargo.toml
e2e/src/: main.rs
programs/pikky/: Cargo.toml
programs/pikky/src/: error.rs  lib.rs  state.rs  utils.rs
programs/pikky/src/instructions/: deposit.rs  execute_trade.rs  initialize.rs  mod.rs  set_strategy.rs  withdraw.rs
programs/wane_registry/: Cargo.toml
programs/wane_registry/src/: lib.rs
programs/wane_vault/: Cargo.toml
programs/wane_vault/src/: lib.rs
scripts/: deploy.sh  setup.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  instructions.ts  mbti.ts  types.ts  utils.ts  x402.ts
sdk/test/: encoding.test.ts
tests/: e2e.ts
tests/agent/: test_engine.py  test_strategies.py  test_x402.py
tests/integration/: test_flow.py
tests/sdk/: client.test.ts  mbti.test.ts  x402.test.ts
