[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pikky"
version = "0.1.0"
description = "PIKKY - x402-based Solana auto-trading AI agent with MBTI-based trading strategies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "PIKKY Team" },
]
keywords = ["solana", "trading", "x402", "mbti", "defi", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "anchorpy>=0.20.1",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "base58>=2.1.1",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pikky"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
