[package]
name = "pikky-cli"
version = "0.1.0"
description = "PIKKY CLI - interact with the PIKKY on-chain trading agent"
edition = "2021"
license = "MIT"

[[bin]]
name = "pikky"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
borsh = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
comfy-table = "7.1"
chrono = "0.4"
dirs = "5.0"
toml = "0.8"
bs58 = "0.5"
anyhow = "1.0"
